# avvalo

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/: dependabot.yml
alembic/: README  env.py
app/: __init__.py  config.py  main.py
deploy/: Caddyfile  backup.sh  env.prod.example  remote-update.sh  restore.sh
docs/: ADJACENT_PRODUCT_IDEAS.md  AI_KNOWLEDGE_PIPELINE.md  DEPLOYMENT.md  EXECUTOR_PROMPT.md  FAMILY_SHIELD_VALIDATION.md  FAMILY_VALIDATION.md  FUNDABILITY_AND_GTM.md  IMPROVEMENT_BACKLOG.md  LAUNCH_EXECUTOR_PROMPT.md  ML_RESEARCH.md  PRODUCT_DESIGN.md  PRODUCT_GUIDE.md  PRODUCT_HORIZONS.md  PRODUCT_VISION.md  README.md  ROADMAP.md  SESSION_DECISIONS.md  USER_STORIES.md  V1_BUILD_SCOPE.md  V1_CURRENT_PM_REVIEW.md  V1_MVP_PRODUCT_REVIEW.md  V1_TECHNICAL_PLAN.md  VERIFY_VALIDATION.md
knowledge/: version.yaml
prompts/: check.txt  checker.txt  family.txt  family_shield.txt  fraud_intelligence_startup_prompt.md  intial.md  merchants.txt  seller_guard.txt  system_safety.txt
tests/: conftest.py  support.py  test_bot_callback_integrity.py  test_bot_wiring_and_config.py  test_check_assets.py  test_config.py  test_consent_and_texts.py  test_deploy_hardening.py  test_editorial_posts.py  test_engine_pipeline.py  test_error_alerting.py  test_faces.py  test_feedback_labels.py  test_golden_fixtures.py  test_improvement_knowledge_ops.py  test_improvement_knowledge_router.py  test_improvement_rule_preservation.py  test_infrastructure.py  test_input_security.py  test_knowledge_admin.py  test_knowledge_operations.py  test_knowledge_overrides.py  test_knowledge_pipeline.py  test_ocr.py  (+48 more)
(+171 files in other folders)
