[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "avvalo"
version = "0.1.0"
description = "AI safety assistant for Uzbekistan"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20,<4",
    "alembic>=1.15,<2",
    "apscheduler>=3.11,<4",
    "asyncpg>=0.30,<1",
    "fastapi>=0.115,<1",
    "google-cloud-vision>=3.10,<4",
    "jinja2>=3.1,<4",
    "langdetect>=1.0.9,<2",
    "numpy>=1.26,<3",
    "openai>=2,<3",
    "paddleocr>=3.0,<4",
    "paddlepaddle>=3.0,<4",
    "pillow>=11,<13",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.8,<3",
    "pytesseract>=0.3.13,<0.4",
    "python-multipart>=0.0.20,<1",
    "pyyaml>=6,<7",
    "sentry-sdk>=2,<3",
    "sqlalchemy[asyncio]>=2.0.38,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20,<1",
    "pytest>=8.3,<10",
    "pytest-asyncio>=0.25,<2",
    "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["tools/eval_models.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Translations carry long lines and Cyrillic glyphs that look like Latin ones.
"app/bot/texts.py" = ["E501", "RUF001"]
"app/web/routes.py" = ["E501", "RUF001"]
"app/web/editorial_copy.py" = ["E501", "RUF001"]
"app/engine/format.py" = ["RUF001"]
"app/engine/validate.py" = ["RUF001"]
"tests/test_editorial_posts.py" = ["E501", "RUF001"]
